--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.4",
+        "kartik-v/bootstrap-fileinput": "dev-master",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0"
     },
